--- a/discoverstyle.css
+++ b/discoverstyle.css
@@ -194,7 +194,7 @@ body, html {
 	padding-bottom: 16%;
 	transform: scale(1.02);
 	background: #333;
-	margin-left: 7px;
+	margin-left: 9px;
 	margin-top: 2px;
 	
 }
@@ -203,7 +203,7 @@ body, html {
 }
 .slider-2 .item img {
 	position: absolute;
-	top: 10%;
+	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%) scale(1);
 	height: 100%;
@@ -290,4 +290,12 @@ body, html {
 }
 .slick-arrow:hover:before {
 	opacity: 1;
+}
+#info{
+    position: absolute;
+	z-index: 10;
+  	top: 50%;
+  	left: 50%;
+  	transform: translate(-50%, -50%);
+	
 }
