--- a/discoverstyle.css
+++ b/discoverstyle.css
@@ -1,301 +1,174 @@
-@font-face {
-	font-family: 'rosettaicons';
-	font-style: normal;
-	font-weight: normal;
-	src: url('rosetta-icons-Regular.eot');
-	src: url('rosetta-icons-Regular.eot?#iefix') format('eot'),
-	url('rosetta-icons-Regular.woff') format('woff'),
-	url('rosetta-icons-Regular.ttf') format('truetype');
-}
-body {
-	font-family: Arial,sans-serif;
-}
-.topbar {
-	border-bottom: 1px solid #e8e8e8;
-	border-bottom: 1px solid rgba(0,0,0,0.05);
-	-webkit-box-shadow: none;
-	box-shadow: none;
-	position: fixed;
-	top: 0;
-	right: 0;
-	left: 0;
-	z-index: 1000;
-}
-.global-nav {
-	border-bottom: 1px solid rgba(0,0,0,0.15);
-	height: 46px;
-	background: transparent;
-	position: relative;
-	width: 100%;
-}
-.global-nav-inner {
-	background: #FFF;
-	height: 46px;
-}
-.global-nav .container {
-	height: 46px;
-	width: auto;
-	max-width: 1190px;
-	margin: auto;
-	text-align: center;
-	position: relative;
-	display: flex;
-}
-.global-nav [role=navigation] {
-	display: inline-block;
-}
-.global-nav [role=navigation], .nav, .nav > li {
-	float: left;
-}
-.nav {
-	text-align: left;
-	list-style: none;
-	margin: 0;
-	padding: 0;
-	display: flex;
-}
-#global-actions > li {
-	height: 46px;
-	overflow: hidden;
-}
-.nav > li {
-	color: #66757f;
-}
-.nav li {
-	position: relative;
-}
-#global-actions > li > a {
-	border-bottom: 4px solid #000;
-	-webkit-transition: all .15s ease-in-out;
-	-moz-transition: all .15s ease-in-out;
-	transition: all .15s ease-in-out;
-}
-.nav > li > a {
-	color: inherit;
-	display: block;
-	font-size: 13px;
-	font-weight: 500;
-	height: 46px;
-	padding: 0 14px 0 4px;
-	text-shadow: none;
-	line-height: 1;
-}
-.nav > li .Icon {
-	float: left;
-	margin: 11px 0 0 10px;
-	width: 23px;
-	height: 23px;
-}
-.Icon--large {
-	font-size: 21px;
-	line-height: 1;
-}
-.Icon {
-	background: transparent;
-	font-style: normal;
-	display: inline-block;
-	vertical-align: baseline;
-}
-.Icon:before {
-	font-family: 'rosettaicons';
-	display: block;
-	font-weight: normal;
-	font-style: normal;
-	text-align: center;
-	-webkit-font-smoothing: antialiased;
-}
-.Icon--home:before { content: "\f053"; }
-.Icon--connect:before { content: "\f050"; }
-.Icon--discover:before{ content: "\f052"; }
-.Icon--me:before { content: "\f056"; }
-.nav > li > a .text {
-	float: left;
-	margin-left: 3px;
-	margin-top: 17px;
-	padding: 0;
-}
-.nav > li > a:hover {
-	color: inherit;
-	text-decoration: none;
-}
-#global-actions > li:hover > a, #global-actions > li.active > a {
-	height: 42px;
-}
-#global-actions > li:hover {
-	color: #000;
-}
-.logo {
-	margin-right: 9vh;
-}
-.logo img{
-	max-height: 46px;
-	max-width: 46px;
-}
-.email {
-	margin-left: 50%;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
-body, html {
-	height: 100%;
-	background: #000;
-	overflow: hidden;
+body{
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #1D212B;
 }
-.slideshow {
-	position: relative;
-	height: 100%;
-	z-index: 1;
+
+.img-slider{
+  position: relative;
+  width: 800px;
+  height: 500px;
+  margin: 10px;
+  background: #1D212B;
 }
-/*---------------------------------------- Slider 1 ----------------------------------------*/
-.slider {
-	height: 100%;
-	overflow: hidden;
+
+.img-slider .slide{
+  z-index: 1;
+  position: absolute;
+  width: 100%;
+  clip-path: circle(0% at 0 50%);
 }
-.slider .item {
-	overflow: hidden;
-	position: relative;
-	height: 100%;
-	min-height: 720px;
+
+.img-slider .slide.active{
+  clip-path: circle(150% at 0 50%);
+  transition: 2s;
+  transition-property: clip-path;
 }
-.slider .item img {
-	width: auto;
-	height: 75%;
-	position: relative;
-	z-index: 1;
-	left: 50%;
-	transform: translateX(-50%) scale(1.4);
-	opacity: 0.4;
-	filter: blur(50px) saturate(3);
+
+.img-slider .slide img{
+  z-index: 1;
+  width: 100%;
+  border-radius: 5px;
 }
-/*---------------------------------------- Slider 2 ----------------------------------------*/
-.slider-2 {
-	position: absolute;
-	z-index: 11;
-	top: 50%;
-	left: 50%;
-	width: 50%;
-	height: 0%;
-	padding-bottom: 35%;
-	transform: translate(-50%, -50%);
-	box-shadow: 0 10px 40px rgba(0, 0, 0, .4);
+
+.img-slider .slide .info{
+  position: absolute;
+  top: 0;
+  padding: 15px 30px;
 }
-.slider-2:before {
-	content: '';
-	position: absolute;
-	left: -1%;
-	bottom: -1%;
-	width: 102%;
-	height: 50%;
-	background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
-	z-index: 1;
-	pointer-events: none;
+
+.img-slider .slide .info h2{
+  color: #fff;
+  font-size: 45px;
+  text-transform: uppercase;
+  font-weight: 800;
+  letter-spacing: 2px;
 }
-.slider-2 .item {
-	height: 0;
-	padding-bottom: 16%;
-	transform: scale(1.02);
-	background: #333;
-	margin-left: 9px;
-	margin-top: 2px;
-	
+
+.img-slider .slide .info p{
+  color: #fff;
+  background: rgba(0, 0, 0, 0.1);
+  font-size: 16px;
+  width: 60%;
+  padding: 10px;
+  border-radius: 4px;
 }
-.slider-2 .item.slick-active {
-	z-index: 10;
+
+.img-slider .navigation{
+  z-index: 2;
+  position: absolute;
+  display: flex;
+  bottom: 30px;
+  left: 50%;
+  transform: translateX(-50%);
 }
-.slider-2 .item img {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%) scale(1);
-	height: 100%;
-	width: auto;
-	opacity: 1;
-	filter: none;
+
+.img-slider .navigation .btn{
+  background: rgba(255, 255, 255, 0.5);
+  width: 12px;
+  height: 12px;
+  margin: 10px;
+  border-radius: 50%;
+  cursor: pointer;
 }
-.slider-2 .slick-dots {
-	bottom: 15px;
-	z-index: 1;
-	text-align: center;
-	position: absolute;
-	padding: 0;
-	left: 0;
-	right: 0;
-	margin: 0 auto;
+
+.img-slider .navigation .btn.active{
+  background: #2696E9;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
 }
-.slider-2 .slick-dots li {
-	display: inline;
-	margin: 0;
-	padding: 0;
+
+@media (max-width: 820px){
+  .img-slider{
+    width: 600px;
+    height: 375px;
+  }
+
+  .img-slider .slide .info{
+    padding: 10px 25px;
+  }
+
+  .img-slider .slide .info h2{
+    font-size: 35px;
+  }
+
+  .img-slider .slide .info p{
+    width: 70%;
+    font-size: 15px;
+  }
+
+  .img-slider .navigation{
+    bottom: 25px;
+  }
+
+  .img-slider .navigation .btn{
+    width: 10px;
+    height: 10px;
+    margin: 8px;
+  }
 }
-.slider-2 .slick-dots li button {
-	border: none;
-	background: none;
-	text-indent: -9999px;
-	font-size: 0;
-	width: 20px;
-	height: 20px;
-	outline: none;
-	position: relative;
-	z-index: 1;
-	cursor: pointer;
+
+@media (max-width: 620px){
+  .img-slider{
+    width: 400px;
+    height: 250px;
+  }
+
+  .img-slider .slide .info{
+    padding: 10px 20px;
+  }
+
+  .img-slider .slide .info h2{
+    font-size: 30px;
+  }
+
+  .img-slider .slide .info p{
+    width: 80%;
+    font-size: 13px;
+  }
+
+  .img-slider .navigation{
+    bottom: 15px;
+  }
+
+  .img-slider .navigation .btn{
+    width: 8px;
+    height: 8px;
+    margin: 6px;
+  }
 }
-.slider-2 .slick-dots li button:before {
-	content: '';
-	width: 4px;
-	height: 4px;
-	background: #fff;
-	border-radius: 4px;
-	display: block;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	opacity: 0.7;
-	transition: all 0.5s ease-out;
+
+@media (max-width: 420px){
+  .img-slider{
+    width: 320px;
+    height: 200px;
+  }
+
+  .img-slider .slide .info{
+    padding: 5px 10px;
+  }
+
+  .img-slider .slide .info h2{
+    font-size: 25px;
+  }
+
+  .img-slider .slide .info p{
+    width: 90%;
+    font-size: 11px;
+  }
+
+  .img-slider .navigation{
+    bottom: 10px;
+  }
 }
-.slider-2 .slick-dots li.slick-active button:before {
-	transform: translate(-50%, -50%) scale(1.4);
-	opacity: 1;
-}
-/*---------------------------------------- Arrows ----------------------------------------*/
-.slick-arrow {
-	position: absolute;
-	z-index: 10;
-	left: 10px;
-	top: 50%;
-	transform: translateY(-50%);
-	border: none;
-	background: none;
-	cursor: pointer;
-	font-size: 0;
-	outline: none;
-	width: 40px;
-	height: 40px;
-}
-.slick-arrow:before {
-	content: '';
-	width: 30px;
-	height: 30px;
-	background-color: #fff;
-	mask-image: url(http://cdn.flaticon.com/svg/22/22086.svg);
-	display: block;
-	opacity: 0.5;
-	transition: all 0.5s ease-out;
-}
-.slick-arrow.slick-next {
-	left: auto;
-	right: 10px;
-}
-.slick-arrow.slick-next:before {
-	transform: rotate(180deg);
-}
-.slick-arrow:hover:before {
-	opacity: 1;
-}
-#info{
-    position: absolute;
-	z-index: 10;
-  	top: 50%;
-  	left: 50%;
-  	transform: translate(-50%, -50%);
-	
-}
+      
